[package]
name = "mpw-tauri"
version = "0.1.0"
description = "MPW bundled with tauri"
authors = ["Duddino <duddino@duddino.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
derive_more = { version = "1.0.0", features = ["display", "error"] }
dirs = "5.0.1"
flate2 = "1.0.33"
mockall = "0.13.0"
reqwest = "0.12.7"
tar = "0.4.41"
thiserror = "1.0.63"
sha256 = "1.5.0"
futures = "0.3.30"
rusqlite = "0.32.1"
jsonrpsee = { version = "0.24.4", features = ["async-client", "client-core", "http-client"] }
tokio = "1.40.0"
base64 = "0.22.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
full-node= []

[dev-dependencies]
mockito = "1.5.0"
serde_json = "1"
tempdir = "0.3.7"
tokio = { version = "1.40.0", features = ["macros", "test-util"] }
